# BioEQ_back

./: README.md  main.py  pyproject.toml
api/: index.py
configs/: test_dataset.json  user_input.json
reports/: test_report.json
scripts/: run_vllm_qwen.sh
src/be_system/: __init__.py  llm_client.py  logging_utils.py  main.py  orchestrator.py  prompts.py  schemas.py
src/be_system/agents/: __init__.py  abstract_analysis_agent.py  abstract_evaluator_agent.py  json_utils.py  pdf_downloader_agent.py  pdf_parser_agent.py  pk_extractor_agent.py  planner_agent.py  pmc_pdf_link_agent.py  pmc_resolver_agent.py  pubmed_fetch_agent.py  pubmed_search_agent.py  retrieval_agent.py  reviewer_agent.py  xml_downloader_agent.py  xml_parser_agent.py
tests/: test_abstract_evaluator.py  test_json_utils.py  test_pdf_validation_smoke.py  test_planner_agent.py  test_pmc_oa_resolution.py
